--- a/src/semantic/target_recognition/darknetMsg/CMakeLists.txt
+++ b/src/semantic/target_recognition/darknetMsg/CMakeLists.txt
@@ -10,6 +10,8 @@ add_compile_options(-std=c++11)
 find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
+  sensor_msgs
+  geometry_msgs
   target_recognition_map_msg
 )
 
