--- a/src/map/target_recognition_map/target_recognition_map/yaml/example.yaml
+++ b/src/map/target_recognition_map/target_recognition_map/yaml/example.yaml
@@ -2,12 +2,20 @@
     seq: 1
     mag: [1,2,3]
     classInfos:
-      person: 30.0
-      chair: 40.0
+      person:
+        x: 30.0
+        y: 40.0
+      chair:
+        x: 30.0
+        y: 40.0
 
 -
     seq: 2
     mag: [1,2,3]
     classInfos:
-      person: 30.0
-      chair: 40.0
+      person:
+        x: 30.0
+        y: 40.0
+      chair:
+        x: 30.0
+        y: 40.0
